fix horiz scroll on sidebyside images on mobile. round opacity to hundredth

--- a/styles.css
+++ b/styles.css
@@ -617,6 +617,7 @@ section.text {
   }
   .view-content .img.sidebyside > img {
     width: 100%;
+    margin-right: 0%;
   }
   .text p {
     font-size: 16px;
